# zkade

./: .gitignore  README.md
frontend/: .env.example  .gitignore  environment.d.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/api/: gameAPI.ts  httpService.ts  soroban.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/games/sudoku/[id]/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/new-room/: page.tsx
frontend/app/test/: page.tsx
frontend/components/cyber/: CyberpunkLogo.tsx  NeonBadge.tsx  NeonButton.tsx  NeonPanel.tsx
frontend/components/home/: ArcadeRoomCard.tsx  SelfSolvingSudoku.tsx
frontend/components/layout/: RetroHeader.tsx
frontend/components/provider/: StellarProvider.tsx
frontend/components/retro/: ArcadeLogo.tsx  PixelBadge.tsx  PixelButton.tsx  PixelPanel.tsx
frontend/components/sudoku/: Game.tsx
frontend/components/sudoku/components/: Action.tsx  Difficulty.tsx  Mode.tsx  Numbers.tsx  Timer.tsx
frontend/components/sudoku/components/layout/: Footer.tsx  GameSection.tsx  StatusSection.tsx
frontend/components/sudoku/context/: SudokuContext.tsx
frontend/styles/: font.ts  theme.ts
frontend/types/: game.ts  room.ts
frontend/utils/: chain.ts
games/sudoku/: Cargo.toml
games/sudoku/host/: Cargo.toml
games/sudoku/host/src/: main.rs
games/sudoku/methods/: Cargo.toml
games/sudoku/methods/guest/: Cargo.toml
games/sudoku/methods/guest/src/: main.rs
games/sudoku/methods/src/: lib.rs
risc0-verifier/: Cargo.toml
server/: .env.example  Cargo.toml
server/src/: main.rs
server/src/api/v1/: errors.rs  mod.rs
server/src/api/v1/controllers/games/: generate_proof.rs  lock_winner.rs  mod.rs  new_room.rs  service_fee.rs  start_game.rs
server/src/api/v1/routes/: all_routes.rs  mod.rs
server/src/api/v1/routes/games/: generate_proof.rs  lock_winner.rs  mod.rs  new_room.rs  service_fee.rs  start_game.rs
server/src/chain/: mod.rs
server/src/config/: env_config.rs  mod.rs
server/src/games/: mod.rs  sudoku.rs
soroban/: Cargo.toml  deploy.sh  deployment.json
soroban/contracts/sudoku/: Cargo.toml
soroban/contracts/sudoku/src/: lib.rs  test.rs
soroban/contracts/sudoku/test_snapshots/test/: double_join_rejected.1.json  invalid_proof_reverts.1.json  private_flow_with_real_givens.1.json  private_zk_flow.1.json  public_flow.1.json
