[workspace]
resolver = "2"
members = ["methods", "host"]

[workspace.dependencies]
risc0-zkvm = { version = "3.0", default-features = false }
risc0-build = "3.0"
risc0-zkvm-platform = "3.0"
sudoku-methods = { path = "methods" }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
anyhow = "1.0"

[profile.release]
debug = 1
lto = true
